--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barriecito&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -16,8 +16,8 @@
   display: none;
 }
 
-.indie {
-  font-family: "Indie Flower", cursive;
+.barriecito {
+  font-family: "Barriecito", system-ui;
   font-weight: 400;
   font-style: normal;
 }
