added framer animations

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,10 @@
   font-family: "Open Sans", sans-serif;
 }
 
+body {
+  background-color: #EFF0EF;
+}
+
 *::-webkit-scrollbar {
   display: none;
 }
