--- a/src/index.css
+++ b/src/index.css
@@ -10,8 +10,11 @@
   box-sizing: border-box;
   scrollbar-width: none;
   -ms-overflow-style: none;
-  color:  #2D2A32;
+}
+
+.sans {
   font-family: "Open Sans", sans-serif;
+  color: #2D2A32;
 }
 
 body {
@@ -54,6 +57,7 @@ body {
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
   }
+
   .dark {
     --background: 0 0% 3.9%;
     --foreground: 0 0% 98%;
@@ -80,6 +84,7 @@ body {
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
   }
+
   .theme {
     --animate-marquee: marquee var(--duration) infinite linear;
     --animate-marquee-vertical: marquee-vertical var(--duration) linear infinite;
@@ -90,6 +95,7 @@ body {
   * {
     @apply border-border;
   }
+
   body {
     @apply bg-background text-foreground;
   }
@@ -100,6 +106,7 @@ body {
   0% {
     transform: translateX(0);
   }
+
   100% {
     transform: translateX(-50%);
   }
@@ -115,23 +122,36 @@ body {
 }
 
 @keyframes spin3d {
-  0%   { transform: rotate3d(0, 1, 0, 0deg); }
-  100% { transform: rotate3d(0, 1, 0, 360deg); }
+  0% {
+    transform: rotate3d(0, 1, 0, 0deg);
+  }
+
+  100% {
+    transform: rotate3d(0, 1, 0, 360deg);
+  }
 }
 
 @keyframes blinkHeightMobile {
-  0%, 5%, 100% {
+
+  0%,
+  5%,
+  100% {
     height: 14px;
   }
+
   3% {
     height: 5px;
   }
 }
 
 @keyframes blinkHeightDesktop {
-  0%, 5%, 100% {
+
+  0%,
+  5%,
+  100% {
     height: 20px;
   }
+
   3% {
     height: 6px;
   }
